--- a/index.html
+++ b/index.html
@@ -5,130 +5,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cordel Moderno</title>
+    <title>Tom Odell- Another Love</title>
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <h1>Another Love</h1>
+        <p>Por <a href="https://www.youtube.com/watch?v=MwpMEbgC7DA&list=RDMwpMEbgC7DA&start_radio=1" target="_blank">Tom Odell</a></p>
     </header>
 
     <section id="s1">
         <p>
-            Estou ficando cansado
+            I wanna take you somewhere
             <br>
-            Da tal tecnologia
+            so you know I care
             <br>
-            Só se fala por e-mail
+            But it’s so cold and I don’t know where
             <br>
-            Mensagem curta e fria
+            I brought you daffodils in a pretty string
             <br>
-            Twitter e Facebook
-            <br>
-            Antes que eu caduque
-            <br>
-            Vou dizer tudo em poesia.
-        </p>
+            But they won’t flower like they did last spring
+            </p>
     </section>
 
     <section class="s2" id="img1">
        <p>
-Não é mais como era antes
+        And I wanna kiss you, make you feel alright
 <br>
-É tudo abreviado
+I’m just so tired to share my nights
 <br>
-"Você" só tem duas letras
+I wanna cry and I wanna love
 <br>
-O "O" e o "E" foi riscado
-<br>
-Para declarar o amor
-<br>
-Basta botar uma flor
-<br>
-E um coração desenhado.
+But all my tears have been used up
        </p>
     </section>
 
     <section class="s1">
         <p>
-            Arroba agora não pesa
+            On another love, another love
             <br>
-            É parte de um endereço
+            All my tears have been used up
             <br>
-            Ponto final nem se usa
+            On another love, another love
             <br>
-            Ou vai até no começo
+            All my tears have been used up
             <br>
-            Agora é .com
+            On another love, another love
             <br>
-            Se o saite é muito bom
+            All my tears have been used up
             <br>
-            Ele vale um alto preço.
+            And if somebody hurts you, I wanna fight
             <br>
-            Pra piorar a liguagem
+            But my hands been broken one too many times
             <br>
-            O emoticom é um risco
+            So I’ll use my voice, I’ll be so fucking rude
             <br>
-            Tem símbolo para tudo
-            <br>
-            Ponto e vírgula e um asterisco
-            <br>
-            Um beijo significa
-            <br>
-            Pra entender como fica
-            <br>
-            Decifre esse rabisco.
+            Words they always win, but I know I’ll lose
         </p>
 
     </section>
 
     <section class="s2" id="img2">
         <p>
-            Tenho saudade das cartas
+            And I’d sing a song that’d be just ours
             <br>
-            Escritas com a própria mão
+            And I’d sing a song that’d be just ours
             <br>
-            Mandava no mês de Junho
+            And I’d sing a song that’d be just ours
             <br>
-            Só chegava no Verão
+            And I’d sing a song that’d be just ours
             <br>
-            Mas matava a saudade
+            On another love, another love
             <br>
-            Era texto de verdade
+            On another love, another love
             <br>
-            Nas linhas do coração.
+            On another love, another love
         </p>
         </section>
 
         <section class="s1">
             <p>
-                Agora, escrevo e envio
+                I wanna sing a song that’d be just ours
                 <br>
-                Chegando na mesma hora
+                But I sang 'em all to another heart
                 <br>
-                Mas quando vou prosear
+                And I wanna cry, I wanna fall in love
                 <br>
-                A pessoa foi embora
+                But all my tears have been used up
                 <br>
-                Abriu outro aplicativo
+                On another love, another love
                 <br>
-                O mundo ficou cativo
+                All my tears have been used up
                 <br>
-                Da tecnologia do agora.
+                On another love, another love
                 <br>
-                Felizmente, pra orar
+                All my tears have been used up
                 <br>
-                Não precisa de internet
+                On another love, another love
                 <br>
-                Deus escuta todo mundo
-                <br>
-                Se quiser, faça esse teste
-                <br>
-                Dois pontos são dois joelhos
-                <br>
-                Seus lábios são aparelhos
-                <br>
-                Deixe que Deus interprete.
+                All my tears have been used up
             </p>
 
 
